d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <description>Ebix Offer Object.  Sourced from Ebix</description>
    <label>Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>