d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Address Line 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>