d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Address Line 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>