d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers (Account)</relationshipLabel>
    <relationshipName>Offers1_del</relationshipName>
    <type>Lookup</type>
</CustomField>