d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/AgentID__c.field-meta.xml
<CustomField>
    <fullName>AgentID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offers1</relationshipName>
    <type>Lookup</type>
</CustomField>