d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ApplicationReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReceivedDate__c</fullName>
    <label>Application Received Date</label>
    <type>Date</type>
</CustomField>