d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ApplicationSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationSignedDate__c</fullName>
    <description>Based on Analytics request, time stamp is required for signed app(ebix &amp; CPal).</description>
    <label>Application Signed Date</label>
    <type>Date</type>
</CustomField>