d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/BillingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillingMethod__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>