d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>