d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/CBR__c.field-meta.xml
<CustomField>
    <fullName>CBR__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Cancer Rider</description>
    <label>CBR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>