d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/CBRCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>CBRCoverageAmount__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>CBR Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>