d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>