d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/CreateDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateDateTime__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Create DateTime</label>
    <type>DateTime</type>
</CustomField>