d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/EbixApplicationID__c.field-meta.xml
<CustomField>
    <fullName>EbixApplicationID__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Ebix Application ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>