d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>