d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/eSigEligible__c.field-meta.xml
<CustomField>
    <fullName>eSigEligible__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <label>eSig Eligible</label>
    <type>Checkbox</type>
</CustomField>