d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/MailToCity__c.field-meta.xml
<CustomField>
    <fullName>MailToCity__c</fullName>
    <label>Mail To City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>