d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/MailToName__c.field-meta.xml
<CustomField>
    <fullName>MailToName__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Mail To Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>