d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/MailToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailToPostalCode__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Mail To Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>