d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/MailToState__c.field-meta.xml
<CustomField>
    <fullName>MailToState__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Mail To State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>