d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/MailToStreetAddressOptional__c.field-meta.xml
<CustomField>
    <fullName>MailToStreetAddressOptional__c</fullName>
    <label>Mail To Street Address (Optional)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>