d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/MailToStreetAddressSupplemental__c.field-meta.xml
<CustomField>
    <fullName>MailToStreetAddressSupplemental__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Mail To Street Address (Supplemental)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>