d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferAgent__c.field-meta.xml
<CustomField>
    <fullName>OfferAgent__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>