d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferAgentOfRecord__c.field-meta.xml
<CustomField>
    <fullName>OfferAgentOfRecord__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer Agent Of Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>