d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>OfferApplicationStatus__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Offer Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent to Underwriting</fullName>
            </value>
            <value>
                <fullName>Automatic Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>