d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferNAP__c.field-meta.xml
<CustomField>
    <fullName>OfferNAP__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <formula>CASE(PaymentFrequency__c,
&quot;Semi-Annually&quot;, ROUND(TotalPremiumAmount__c * 2, 2),
&quot;Semiannual&quot;, ROUND(TotalPremiumAmount__c * 2, 2),
&quot;Semi-Annual&quot;, ROUND(TotalPremiumAmount__c * 2, 2),
&quot;Tri-Annually&quot;, ROUND(TotalPremiumAmount__c * 3, 2),
&quot;Quarterly&quot;, ROUND(TotalPremiumAmount__c * 4, 2),
&quot;Bi-Monthly&quot;, ROUND(TotalPremiumAmount__c * 6, 2),
&quot;Monthly&quot;, ROUND(TotalPremiumAmount__c * 12, 2),
&quot;Semi-Monthly&quot;, ROUND(TotalPremiumAmount__c * 24, 2),
&quot;Quad-Weekly&quot;, ROUND(TotalPremiumAmount__c * 13, 2),
&quot;Bi-Weekly&quot;, ROUND(TotalPremiumAmount__c * 26, 2),
&quot;Weekly&quot;, ROUND(TotalPremiumAmount__c * 52, 2),
TotalPremiumAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer NAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>