d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferOwner__c.field-meta.xml
<CustomField>
    <fullName>OfferOwner__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offers2</relationshipName>
    <type>Lookup</type>
</CustomField>