d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferSentDate__c.field-meta.xml
<CustomField>
    <fullName>OfferSentDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Offer Sent Date</label>
    <type>Date</type>
</CustomField>