d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferSequenceNumber__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Generated from Salesforce. Uses a seed number from Sequence # Range database.</description>
    <label>Offer Sequence Number</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>