d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferSource__c.field-meta.xml
<CustomField>
    <fullName>OfferSource__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <formula>IF( ISBLANK( EbixApplicationID__c ) , &quot;Salesforce&quot;, &quot;Ebix&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Source</label>
    <type>Text</type>
</CustomField>