d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferStatus__c.field-meta.xml
<CustomField>
    <fullName>OfferStatus__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Completed/Sent</fullName>
            </value>
            <value>
                <fullName>Consumer Invited</fullName>
            </value>
            <value>
                <fullName>Coverage maxed out</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Enrolled - Pending Review</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Suspected Fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>