d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD&amp;D Enrollment</fullName>
            </value>
            <value>
                <fullName>eSignature</fullName>
            </value>
            <value>
                <fullName>No Sign</fullName>
            </value>
            <value>
                <fullName>Paper Application</fullName>
            </value>
            <value>
                <fullName>Voice Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>