d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/OriginalOfferSentDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalOfferSentDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Original Offer Sent Date</label>
    <type>Date</type>
</CustomField>