d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>