d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ProposedInsured__c.field-meta.xml
<CustomField>
    <fullName>ProposedInsured__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>