d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ProposedInsuredName__c.field-meta.xml
<CustomField>
    <fullName>ProposedInsuredName__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <formula>ProposedInsured__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Insured Name</label>
    <type>Text</type>
</CustomField>