d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>