d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ReceivedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDateTime__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Received DateTime</label>
    <type>DateTime</type>
</CustomField>