d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/Replacement__c.field-meta.xml
<CustomField>
    <fullName>Replacement__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Used to not offer certain products for 30 days.    Shows an error message at member search using the NY Not Available Replacement field. Quote is not offered for next 30 days if replacement is &apos;yes&apos; for NY member.</description>
    <label>Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>