d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ResidentState__c.field-meta.xml
<CustomField>
    <fullName>ResidentState__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Resident State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>