d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/RiderCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>RiderCoverageAmount__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Rider Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>