d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/RiderType__c.field-meta.xml
<CustomField>
    <fullName>RiderType__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Rider Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBR</fullName>
            </value>
            <value>
                <fullName>CHSBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>