d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/SentDate__c.field-meta.xml
<CustomField>
    <fullName>SentDate__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>