d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/TobaccoUse__c.field-meta.xml
<CustomField>
    <fullName>TobaccoUse__c</fullName>
    <label>Tobacco Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>