d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/TotalPremiumAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPremiumAmount__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Sum of base premium+Rider premiums</description>
    <label>Total Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>