d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/UnderwritingClass__c.field-meta.xml
<CustomField>
    <fullName>UnderwritingClass__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Underwriting Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Non-Tobacco</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Non-Tobacco</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>