d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/vSigEligible__c.field-meta.xml
<CustomField>
    <fullName>vSigEligible__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Field added for reporting needs, saved with offer when offer is deemed to be voice signature eligible</description>
    <label>vSig Eligible</label>
    <type>Checkbox</type>
</CustomField>