d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/vSigSubmitted__c.field-meta.xml
<CustomField>
    <fullName>vSigSubmitted__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>This field is used to track the agent has clicked on the Voice Signature button.</description>
    <label>vSig Submitted</label>
    <type>Checkbox</type>
</CustomField>