d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/fields/ZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ZipPostalCode__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>