d2c-org/ilh-sales/base-objects/main/default/objects/Offer__c/recordTypes/ILHSalesOffer.recordType-meta.xml
<RecordType>
    <fullName>ILHSalesOffer</fullName>
    <active>true</active>
    <label>ILH Sales Offer</label>
</RecordType>